--- a/sage_deployment_pipeline.ipynb
+++ b/sage_deployment_pipeline.ipynb
@@ -2,12 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "id": "1230b0bb-0955-435b-b732-18531a286c84",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sagemaker.config INFO - Not applying SDK defaults from location: /etc/xdg/sagemaker/config.yaml\n",
+      "sagemaker.config INFO - Not applying SDK defaults from location: /home/ec2-user/.config/sagemaker/config.yaml\n"
+     ]
+    }
+   ],
    "source": [
     "import sagemaker\n",
     "import boto3\n",
@@ -17,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "id": "83fb5c3a-fb89-46eb-80ec-c5f37c1a2215",
    "metadata": {
     "tags": []
@@ -33,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "id": "abd14087-442e-450d-a183-67aca614d3f8",
    "metadata": {
     "tags": []
@@ -53,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "id": "7b020d85-15f6-467f-85d3-1c94f1a20a55",
    "metadata": {
     "tags": []
@@ -74,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "id": "c649d761-3caa-47f2-b3cd-8ef9c0e8ad65",
    "metadata": {
     "tags": []
@@ -83,17 +92,17 @@
     {
      "data": {
       "text/plain": [
-       "{'ModelArn': 'arn:aws:sagemaker:ap-south-1:654654222480:model/Prophet-serverless-model-20240818104316',\n",
-       " 'ResponseMetadata': {'RequestId': '2083eef0-6675-4171-9b78-58c44c956ef4',\n",
+       "{'ModelArn': 'arn:aws:sagemaker:ap-south-1:654654222480:model/Prophet-serverless-model-20240818113648',\n",
+       " 'ResponseMetadata': {'RequestId': '2577a6ae-6c64-4e50-b112-2306b4e2540f',\n",
        "  'HTTPStatusCode': 200,\n",
-       "  'HTTPHeaders': {'x-amzn-requestid': '2083eef0-6675-4171-9b78-58c44c956ef4',\n",
+       "  'HTTPHeaders': {'x-amzn-requestid': '2577a6ae-6c64-4e50-b112-2306b4e2540f',\n",
        "   'content-type': 'application/x-amz-json-1.1',\n",
        "   'content-length': '102',\n",
-       "   'date': 'Sun, 18 Aug 2024 10:43:16 GMT'},\n",
+       "   'date': 'Sun, 18 Aug 2024 11:36:48 GMT'},\n",
        "  'RetryAttempts': 0}}"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 6,
    "id": "a62ef20d-7947-45fd-803e-a435053efba4",
    "metadata": {},
    "outputs": [],
@@ -137,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 7,
    "id": "a5fb702a-4c35-4ac4-ae5b-92c47d5fc469",
    "metadata": {},
    "outputs": [
@@ -145,16 +154,16 @@
      "data": {
       "text/plain": [
        "{'EndpointArn': 'arn:aws:sagemaker:ap-south-1:654654222480:endpoint/prophet-endpoint',\n",
-       " 'ResponseMetadata': {'RequestId': '80489051-cb70-4600-af7a-d6511b313706',\n",
+       " 'ResponseMetadata': {'RequestId': '61aba9b3-8a09-4420-ae75-a79fbe4f4f0e',\n",
        "  'HTTPStatusCode': 200,\n",
-       "  'HTTPHeaders': {'x-amzn-requestid': '80489051-cb70-4600-af7a-d6511b313706',\n",
+       "  'HTTPHeaders': {'x-amzn-requestid': '61aba9b3-8a09-4420-ae75-a79fbe4f4f0e',\n",
        "   'content-type': 'application/x-amz-json-1.1',\n",
        "   'content-length': '85',\n",
-       "   'date': 'Sun, 18 Aug 2024 10:43:17 GMT'},\n",
+       "   'date': 'Sun, 18 Aug 2024 11:36:49 GMT'},\n",
        "  'RetryAttempts': 0}}"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
