--- a/sagemaker_inference.ipynb
+++ b/sagemaker_inference.ipynb
@@ -2,36 +2,41 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 104,
    "id": "68d06a59-eb91-43c7-8076-7e210a1fa4e8",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'message': 'Missing Authentication Token'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import requests\n",
+    "import json\n",
+    "import boto3\n",
     "\n",
-    "csv_data = \"\"\"ds,y\n",
-    "2024-08-01,100\n",
-    "2024-08-02,150\n",
-    "2024-08-03,200\"\"\"\n",
+    "client = boto3.client('sagemaker-runtime')\n",
     "\n",
-    "# response = requests.post('https://runtime.sagemaker.ap-south-1.amazonaws.com/endpoints/prophet-endpoint/invocations', data=csv_data, headers={'Content-Type': 'text/csv'})\n",
-    "# print(response.json())"
+    "df = pd.read_csv(\"synthetic_data.csv\")\n",
+    "# Convert DataFrame to a list of dictionaries\n",
+    "realtime_data = df.iloc[:2,:].to_dict(orient='records')\n",
+    "\n",
+    "# Convert to JSON\n",
+    "json_data = json.dumps(realtime_data)\n",
+    "\n",
+    "response = client.invoke_endpoint(\n",
+    "    EndpointName='prophet-endpoint',\n",
+    "    ContentType='application/json',\n",
+    "    Body=json.dumps(json_data)\n",
+    ")\n",
+    "\n",
+    "predictions = response['Body'].read().decode()\n",
+    "# Clean the JSON string by removing extra escape characters\n",
+    "cleaned_response = predictions.replace('\\\\\"', '\"').strip('\"\\n')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "e0ed5851-f1ec-4941-975f-7fe6a73f626a",
+   "execution_count": 105,
+   "id": "58da55fc-b5c0-4071-8663-d8cf28acb150",
    "metadata": {
     "tags": []
    },
@@ -39,24 +44,57 @@
     {
      "data": {
       "text/plain": [
-       "'{\"columns\":[\"ds\",\"y\"],\"index\":[0,1,2,3,4],\"data\":[[\"01-01-2023\",100.496714153],[\"01-02-2023\",100.3584498518],[\"01-03-2023\",101.0061383899],[\"01-04-2023\",102.5291682463],[\"01-05-2023\",102.2950148716]]}'"
+       "'[{\"ds\":1672531200000,\"yhat\":103.3200657555,\"yhat_lower\":100.7775545426,\"yhat_upper\":105.8792209069},{\"ds\":1672617600000,\"yhat\":103.219479347,\"yhat_lower\":100.5830584145,\"yhat_upper\":105.645204813}]'"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv(\"synthetic_data.csv\")\n",
-    "result = df.iloc[:5, :].to_json(orient=\"split\")\n",
-    "result"
+    "cleaned_response"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "63fdfa1a-dfe2-4f1d-bfc1-e112b5ffbac6",
+   "execution_count": 106,
+   "id": "b5eb9937-2e10-4d49-acea-3bacacd76d5e",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "DataFrame constructor not properly called!",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_6188/1397370256.py\u001b[0m in \u001b[0;36m?\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Convert to DataFrame\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mprediction_df\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mjson\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloads\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpredictions\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mprediction_df\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/envs/python3/lib/python3.10/site-packages/pandas/core/frame.py\u001b[0m in \u001b[0;36m?\u001b[0;34m(self, data, index, columns, dtype, copy)\u001b[0m\n\u001b[1;32m    882\u001b[0m                 \u001b[0mmgr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0marrays_to_mgr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcolumns\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mindex\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtyp\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmanager\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    883\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    884\u001b[0m                 arr2d = construct_2d_arraylike_from_scalar(\n\u001b[1;32m    885\u001b[0m                     \u001b[0mdata\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 886\u001b[0;31m                     \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    887\u001b[0m                     \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    888\u001b[0m                     \u001b[0mdtype\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    889\u001b[0m                     \u001b[0mcopy\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: DataFrame constructor not properly called!"
+     ]
+    }
+   ],
+   "source": [
+    "# Convert to DataFrame\n",
+    "prediction_df = pd.DataFrame(json.loads(predictions))\n",
+    "prediction_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "93f1f713-5eab-4c48-9122-276027249668",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "dcb13949-d2e8-4487-83d4-a0ad707917b2",
    "metadata": {
     "tags": []
    },
@@ -65,24 +103,140 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "404\n"
+      "Collecting pandas==1.5.3\n",
+      "  Downloading pandas-1.5.3-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (11 kB)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.1 in /home/ec2-user/anaconda3/envs/python3/lib/python3.10/site-packages (from pandas==1.5.3) (2.9.0)\n",
+      "Requirement already satisfied: pytz>=2020.1 in /home/ec2-user/anaconda3/envs/python3/lib/python3.10/site-packages (from pandas==1.5.3) (2024.1)\n",
+      "Requirement already satisfied: numpy>=1.21.0 in /home/ec2-user/anaconda3/envs/python3/lib/python3.10/site-packages (from pandas==1.5.3) (1.22.4)\n",
+      "Requirement already satisfied: six>=1.5 in /home/ec2-user/anaconda3/envs/python3/lib/python3.10/site-packages (from python-dateutil>=2.8.1->pandas==1.5.3) (1.16.0)\n",
+      "Downloading pandas-1.5.3-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (12.1 MB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m12.1/12.1 MB\u001b[0m \u001b[31m107.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m0:01\u001b[0m\n",
+      "\u001b[?25hInstalling collected packages: pandas\n",
+      "  Attempting uninstall: pandas\n",
+      "    Found existing installation: pandas 2.2.2\n",
+      "    Uninstalling pandas-2.2.2:\n",
+      "      Successfully uninstalled pandas-2.2.2\n",
+      "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
+      "dask-expr 1.1.2 requires pandas>=2, but you have pandas 1.5.3 which is incompatible.\u001b[0m\u001b[31m\n",
+      "\u001b[0mSuccessfully installed pandas-1.5.3\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
    ],
    "source": [
-    "response = requests.get('https://runtime.sagemaker.ap-south-1.amazonaws.com/endpoints/prophet-endpoint/')\n",
-    "print(response.status_code)"
+    "pip install pandas==1.5.3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "dc9dd86f-a7bb-4fe7-a5f5-fa18487556a4",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ds</th>\n",
+       "      <th>trend</th>\n",
+       "      <th>yhat_lower</th>\n",
+       "      <th>yhat_upper</th>\n",
+       "      <th>trend_lower</th>\n",
+       "      <th>trend_upper</th>\n",
+       "      <th>additive_terms</th>\n",
+       "      <th>additive_terms_lower</th>\n",
+       "      <th>additive_terms_upper</th>\n",
+       "      <th>weekly</th>\n",
+       "      <th>weekly_lower</th>\n",
+       "      <th>weekly_upper</th>\n",
+       "      <th>multiplicative_terms</th>\n",
+       "      <th>multiplicative_terms_lower</th>\n",
+       "      <th>multiplicative_terms_upper</th>\n",
+       "      <th>yhat</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2023-01-01</td>\n",
+       "      <td>103.386637</td>\n",
+       "      <td>101.053947</td>\n",
+       "      <td>105.886944</td>\n",
+       "      <td>103.386637</td>\n",
+       "      <td>103.386637</td>\n",
+       "      <td>-0.066571</td>\n",
+       "      <td>-0.066571</td>\n",
+       "      <td>-0.066571</td>\n",
+       "      <td>-0.066571</td>\n",
+       "      <td>-0.066571</td>\n",
+       "      <td>-0.066571</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>103.320066</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          ds       trend  yhat_lower  yhat_upper  trend_lower  trend_upper  \\\n",
+       "0 2023-01-01  103.386637  101.053947  105.886944   103.386637   103.386637   \n",
+       "\n",
+       "   additive_terms  additive_terms_lower  additive_terms_upper    weekly  \\\n",
+       "0       -0.066571             -0.066571             -0.066571 -0.066571   \n",
+       "\n",
+       "   weekly_lower  weekly_upper  multiplicative_terms  \\\n",
+       "0     -0.066571     -0.066571                   0.0   \n",
+       "\n",
+       "   multiplicative_terms_lower  multiplicative_terms_upper        yhat  \n",
+       "0                         0.0                         0.0  103.320066  "
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import joblib\n",
+    "\n",
+    "data = pd.DataFrame(json.loads(json_data))\n",
+    "\n",
+    "# Load the model\n",
+    "with open('prophet_model.pkl', 'rb') as f:\n",
+    "    model = pickle.load(f)\n",
+    "\n",
+    "forecast = model.predict(data[['ds']])\n",
+    "forecast"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc469b68-58b9-479b-b30b-91aedcd2a308",
+   "id": "0888220e-a1bc-4146-be66-c17bcc9a35e3",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "https://prophet-endpoint.runtime.sagemaker.ap-south-1.amazonaws.com/endpoints/prophet-endpoint/invocations"
-   ]
+   "source": []
   }
  ],
  "metadata": {
