working version finalised and reformatted

--- a/docker/inference_image.ipynb
+++ b/docker/inference_image.ipynb
@@ -51,11 +51,13 @@
    },
    "outputs": [],
    "source": [
-    "account_id = boto3.client('sts').get_caller_identity().get('Account')\n",
+    "account_id = boto3.client(\"sts\").get_caller_identity().get(\"Account\")\n",
     "region = boto3.Session().region_name\n",
-    "ecr_repository = 'prophet_infernece'\n",
-    "tag = ':latest'\n",
-    "processing_repository_uri = '{}.dkr.ecr.{}.amazonaws.com/{}'.format(account_id, region, ecr_repository + tag)"
+    "ecr_repository = \"prophet_infernece\"\n",
+    "tag = \":latest\"\n",
+    "processing_repository_uri = \"{}.dkr.ecr.{}.amazonaws.com/{}\".format(\n",
+    "    account_id, region, ecr_repository + tag\n",
+    ")"
    ]
   },
   {
