--- a/notebooks/sage_deployment_pipeline.ipynb
+++ b/notebooks/sage_deployment_pipeline.ipynb
@@ -35,7 +35,7 @@
    "source": [
     "# Initialize SageMaker session and client\n",
     "sagemaker_session = sagemaker.Session()\n",
-    "sm_client = boto3.client('sagemaker')\n",
+    "sm_client = boto3.client(\"sagemaker\")\n",
     "role = sagemaker.get_execution_role()  # Replace with your SageMaker execution role\n",
     "warnings.filterwarnings(\"ignore\")"
    ]
@@ -51,7 +51,9 @@
    "source": [
     "sagemaker_bucket_name = \"hemz-sagemaker-bucket\"\n",
     "\n",
-    "inference_image_uri = \"654654222480.dkr.ecr.ap-south-1.amazonaws.com/prophet_infernece:latest\"\n",
+    "inference_image_uri = (\n",
+    "    \"654654222480.dkr.ecr.ap-south-1.amazonaws.com/prophet_infernece:latest\"\n",
+    ")\n",
     "\n",
     "model_name = \"Prophet-serverless-model\" + \"-\" + strftime(\"%Y%m%d%H%M%S\", gmtime())\n",
     "\n",
@@ -70,15 +72,14 @@
    "outputs": [],
    "source": [
     "# List training jobs\n",
-    "response = sm_client.list_training_jobs(\n",
-    "    SortBy='CreationTime',\n",
-    "    SortOrder='Descending'\n",
-    ")\n",
+    "response = sm_client.list_training_jobs(SortBy=\"CreationTime\", SortOrder=\"Descending\")\n",
     "\n",
     "# Print training jobs to find the relevant one\n",
-    "latest_training_job_name = response['TrainingJobSummaries'][0]['TrainingJobName'] \\\n",
-    "    if response['TrainingJobSummaries'][0]['TrainingJobStatus'] == 'Completed' \\\n",
-    "    else print(\"The latest training Job is not successful\")"
+    "latest_training_job_name = (\n",
+    "    response[\"TrainingJobSummaries\"][0][\"TrainingJobName\"]\n",
+    "    if response[\"TrainingJobSummaries\"][0][\"TrainingJobStatus\"] == \"Completed\"\n",
+    "    else print(\"The latest training Job is not successful\")\n",
+    ")"
    ]
   },
   {
@@ -112,11 +113,13 @@
     "sm_client.create_model(\n",
     "    ModelName=model_name,\n",
     "    ExecutionRoleArn=role,\n",
-    "    Containers=[{\n",
-    "        \"Image\": inference_image_uri,\n",
-    "        \"Mode\": \"SingleModel\",\n",
-    "        \"ModelDataUrl\": f's3://{sagemaker_bucket_name}/output-data/model-artifacts/{latest_training_job_name}/output/model.tar.gz'\n",
-    "    }]\n",
+    "    Containers=[\n",
+    "        {\n",
+    "            \"Image\": inference_image_uri,\n",
+    "            \"Mode\": \"SingleModel\",\n",
+    "            \"ModelDataUrl\": f\"s3://{sagemaker_bucket_name}/output-data/model-artifacts/{latest_training_job_name}/output/model.tar.gz\",\n",
+    "        }\n",
+    "    ],\n",
     ")"
    ]
   },
@@ -129,8 +132,8 @@
    "source": [
     "# Create endpoint configuration\n",
     "endpoint_config = sm_client.create_endpoint_config(\n",
-    "   EndpointConfigName=\"prophet-endpoint-config\",\n",
-    "   ProductionVariants=[\n",
+    "    EndpointConfigName=\"prophet-endpoint-config\",\n",
+    "    ProductionVariants=[\n",
     "        {\n",
     "            \"ModelName\": model_name,\n",
     "            \"VariantName\": \"AllTraffic\",\n",
@@ -138,9 +141,9 @@
     "                \"MemorySizeInMB\": 2048,\n",
     "                \"MaxConcurrency\": 1,\n",
     "                \"ProvisionedConcurrency\": 1,\n",
-    "            }\n",
-    "        } \n",
-    "    ]\n",
+    "            },\n",
+    "        }\n",
+    "    ],\n",
     ")"
    ]
   },
@@ -171,8 +174,7 @@
    "source": [
     "# Create the endpoint\n",
     "sm_client.create_endpoint(\n",
-    "    EndpointName=endpoint_name,\n",
-    "    EndpointConfigName=endpoint_config_name\n",
+    "    EndpointName=endpoint_name, EndpointConfigName=endpoint_config_name\n",
     ")"
    ]
   },
