--- a/notebooks/sage_training_pipeline.ipynb
+++ b/notebooks/sage_training_pipeline.ipynb
@@ -51,7 +51,7 @@
    "source": [
     "# Initialize SageMaker session and client\n",
     "sagemaker_session = sagemaker.Session()\n",
-    "sm_client = boto3.client('sagemaker')\n",
+    "sm_client = boto3.client(\"sagemaker\")\n",
     "pipeline_session = PipelineSession()\n",
     "role = sagemaker.get_execution_role()  # Replace with your SageMaker execution role\n",
     "warnings.filterwarnings(\"ignore\")"
@@ -68,21 +68,20 @@
    "source": [
     "# Define input parameters\n",
     "input_data_uri = ParameterString(\n",
-    "    name=\"InputDataUri\",\n",
-    "    default_value=\"s3://hemz-sagemaker-bucket/input-data/\"\n",
+    "    name=\"InputDataUri\", default_value=\"s3://hemz-sagemaker-bucket/input-data/\"\n",
     ")\n",
     "\n",
     "output_data_uri = ParameterString(\n",
-    "    name=\"OutputDataUri\",\n",
-    "    default_value=\"s3://hemz-sagemaker-bucket/output-data/\"\n",
+    "    name=\"OutputDataUri\", default_value=\"s3://hemz-sagemaker-bucket/output-data/\"\n",
     ")\n",
     "\n",
     "model_approval_status = ParameterString(\n",
-    "    name=\"ModelApprovalStatus\",\n",
-    "    default_value=\"Approved\"\n",
+    "    name=\"ModelApprovalStatus\", default_value=\"Approved\"\n",
     ")\n",
     "\n",
-    "training_image_uri = \"654654222480.dkr.ecr.ap-south-1.amazonaws.com/prophet_training:latest\"\n",
+    "training_image_uri = (\n",
+    "    \"654654222480.dkr.ecr.ap-south-1.amazonaws.com/prophet_training:latest\"\n",
+    ")\n",
     "\n",
     "model_package_group_name = \"ProphetModelGroup\""
    ]
@@ -119,9 +118,19 @@
     "preprocessing_step = ProcessingStep(\n",
     "    name=\"PreprocessData\",\n",
     "    processor=script_processor,\n",
-    "    inputs=[sagemaker.processing.ProcessingInput(source=input_data_uri, destination=\"/opt/ml/processing/input\")],\n",
-    "    outputs=[sagemaker.processing.ProcessingOutput(output_name=\"train\", destination=f\"{output_data_uri.default_value}train\", source=\"/opt/ml/processing/output/train\")],\n",
-    "    code=\"code/preprocess.py\"  # Replace with your preprocessing script\n",
+    "    inputs=[\n",
+    "        sagemaker.processing.ProcessingInput(\n",
+    "            source=input_data_uri, destination=\"/opt/ml/processing/input\"\n",
+    "        )\n",
+    "    ],\n",
+    "    outputs=[\n",
+    "        sagemaker.processing.ProcessingOutput(\n",
+    "            output_name=\"train\",\n",
+    "            destination=f\"{output_data_uri.default_value}train\",\n",
+    "            source=\"/opt/ml/processing/output/train\",\n",
+    "        )\n",
+    "    ],\n",
+    "    code=\"code/preprocess.py\",  # Replace with your preprocessing script\n",
     ")"
    ]
   },
@@ -141,7 +150,7 @@
     "    sagemaker_session=pipeline_session,\n",
     "    instance_count=1,\n",
     "    instance_type=\"ml.m5.large\",\n",
-    "    entry_point='code/train.py',\n",
+    "    entry_point=\"code/train.py\",\n",
     "    script_mode=True,\n",
     "    output_path=\"s3://hemz-sagemaker-bucket/output-data/model-artifacts/\",\n",
     ")"
@@ -161,8 +170,13 @@
     "    name=\"TrainModel\",\n",
     "    estimator=prophet_estimator,\n",
     "    inputs={\n",
-    "        \"train\": TrainingInput(s3_data=preprocessing_step.properties.ProcessingOutputConfig.Outputs[\"train\"].S3Output.S3Uri, content_type=\"text/csv\")\n",
-    "    }\n",
+    "        \"train\": TrainingInput(\n",
+    "            s3_data=preprocessing_step.properties.ProcessingOutputConfig.Outputs[\n",
+    "                \"train\"\n",
+    "            ].S3Output.S3Uri,\n",
+    "            content_type=\"text/csv\",\n",
+    "        )\n",
+    "    },\n",
     ")"
    ]
   },
